--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'poppins', sans-serif;
 }
 
 header{
@@ -21,6 +22,10 @@ header{
 
 .head__div-a:hover{
     color: #ffffff;
+}
+
+.head__div-a{
+    font-size: 23px;
 }
 
 .head__nav{
@@ -73,13 +78,13 @@ header{
 
 }
 
-.muestra__div-img{
+.muestra__img{
     width: 100%;
     border-radius: 100%;
     padding: 3% 10%;
 }
 
-.muestra__div-img:hover{
+.muestra__img:hover{
     filter: drop-shadow(0px 0px 10px #000000);
 }
 
@@ -95,8 +100,21 @@ footer{
     color: #ffffff;
 }
 
+.footer__div h4{
+    font-size: 35px;
+}
+
+.footer__div p{
+    font-size: 26px;
+}
+
+.footer__div h5{
+    font-size: 28px;
+}
+
 .footer__div-nav{
     text-align: center;
+    font-size: 26px;
 }
 
 .footer__div-ul{
@@ -117,20 +135,31 @@ footer{
     width: 33%;
 }
 
-.footer__div-form h5{
-    text-align: left;
-    position: relative;
+.footer__div-form{
     font-size: 26px;
 }
 
-.footer__div-form img{
+.footer__div-div img{
     width: 43px;
     height: 43px;
     border-radius: 100%;
 }
 
-.footer__div-form div{
-    padding: 3% 0%;
+.footer__div-div a{
+    padding: 1%;
+}
+
+.footer__div-div{
+    padding: 7% 0%;
+}
+
+.footer__div-div h6{
+    margin: 0;
+    font-size: 26px;
+}
+
+#email{
+    width: 70%;
 }
 
 #productos{
@@ -145,7 +174,7 @@ footer{
 
 .img-producto{
     width: 100%;
-    height: 100%;
+    height: 80%;
     border-radius: 30px 30px 0px 0px;
 }
 
@@ -153,19 +182,230 @@ footer{
     border: 2px solid #000000;
     padding-bottom: 100px;
     border-radius: 30px 30px 30px 30px;
+    background-color: #f5f5f5f5;
 }
 
 .productos__article:hover{
     box-shadow: 0px 0px 0px 5px #60606099;
 }
 
+.productos__article p{
+    font-size: 30px;
+}
+
 .productos__article h5{
-    font-size: 18px;
+    font-size: 28px;
     display: inline;
     position: relative;
     border-radius: 30px;
-    top: 20px;
+    top: 5%;
     padding: 0px 20px;
     background-color: #000000;
     color: #ffffff;
+}
+
+@media (max-width: 768px) {
+    .head__nav-img{
+        width: 19%;
+    }
+
+    .head__div-a{
+        font-size: 16px;
+    }
+
+    .banner__div-img{
+        width: 70%;
+    }
+
+    #muestra{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        
+    }
+
+    .muestra__a{
+        text-align: center;
+    }
+
+    .muestra__img{
+        width: 80%;
+        padding: 1% 5%;
+    }
+    
+    #productos{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+
+    .productos__article{
+        overflow: hidden;
+    }
+
+    .productos__article p{
+        font-size: 24px;
+    }
+
+    .productos__article h5{
+        font-size: 26px;
+    }
+
+    .img-producto{
+        position: relative;
+        bottom: 20px;
+        width: 100%;
+        height: 80%;
+    }
+
+    .footer__div h4{
+        font-size: 26px;
+    }
+
+    .footer__div p{
+        font-size: 20px;
+    }
+
+    .footer__div h5{
+        font-size: 20px;
+    }
+
+    .footer__div-nav{
+        font-size: 18px;
+    }
+
+    .footer__div-form{
+        font-size: 18px;
+    }
+
+    .footer__div-div h6{
+        margin: 0;
+        font-size: 18px;
+    }
+
+    .footer__div-div{
+        padding: 10%;
+        display: grid;
+        grid-template-areas: 
+        'titulo titulo'
+        '2 3'
+        '4 5';
+    }
+
+    .item-1{
+        grid-area: titulo;
+    }
+
+    .item-2{
+        grid-area: 2;
+    }
+
+    .item-2, .item-4{
+        padding: 6% 15%;
+        justify-self: end;
+    }
+
+    .item-3, .item-5{
+        padding: 6% 15%;
+        justify-self: start;
+    }
+}
+
+@media (max-width: 480px) {
+    .head__div{
+        position: absolute;
+        opacity: 0%;
+    }
+
+    #productos{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
+        gap: 20px;
+    }
+
+    .productos__article{
+        padding: 0 0 50px 0;
+        border: -20px;
+        overflow: hidden;
+    }
+
+    .productos__article p{
+        font-size: 20px;
+    }
+
+    .productos__article h5{
+        font-size: 24px;
+    }
+
+    .img-producto{
+        position: relative;
+        bottom: 20px;
+        width: 100%;
+        height: 80%;
+    }
+
+    footer{
+        flex-direction: column;
+        text-align: center;
+    } 
+
+    .footer__div{
+        width: 100%;
+        padding: 3%;
+    }
+
+    #email{
+        width: 100%;
+        margin: 5px;
+    }
+
+    .footer__div-form{
+        width: 100%;
+    }
+
+    #email{
+        width: 50%;
+    }
+
+    .footer__div-div{
+        width: 80%;
+        position: relative;
+        left: 10%;
+        padding: 5% 0;
+        display: grid;
+        grid-template-areas: 
+        'titulo titulo titulo titulo'
+        '2 3 4 5';
+    }
+
+    .item-2, .item-4{
+        padding: 10px 0 0 0;
+        justify-self: center;
+    }
+
+    .item-3, .item-5{
+        padding: 10px 0 0 0;
+        justify-self: center;
+    }
+
+    .footer__div h4{
+        font-size: 24px;
+    }
+
+    .footer__div p{
+        font-size: 18px;
+    }
+
+    .footer__div h5{
+        font-size: 20px;
+    }
+
+    .footer__div-form{
+        font-size: 14px;
+    }
+
+    .footer__div-div h6{
+        margin: 0;
+        font-size: 14px;
+    }
+
 }
